Bug 1350286 - Report size of nursery entries vector for NurseryAwayreHashMap r=sfink